--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
 	<body>
 		<main>
 			<section>
+				<h2>Connected Customer</h2>
 				<ul>
 					<li>Client ID: <%= cookies.client_id %></li>
 					<li>Auth Token: <%= cookies.auth_token %></li>
@@ -19,6 +20,7 @@
 				</ul>
 			</section>
 			<section>
+				<h2>API Endpoints</h2>
 				<ol>
       		<li><a href="/clients">Clients</a></li>
 					<li><a href="/users">Users</a></li>
