--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<main>
-			<section>
+			<!--<section>
 				<h2>Connected Customer</h2>
 				<ul>
 					<li>Client ID: <%= cookies.client_id %></li>
@@ -18,7 +18,7 @@
 					<li>Customer ID: <%= cookies.customer_id %></li>
 					<li>User ID: <%= cookies.user_id %></li>
 				</ul>
-			</section>
+			</section>-->
 			<section>
 				<h2>API Endpoints</h2>
 				<ol>
