--- a/views/users.ejs
+++ b/views/users.ejs
@@ -9,22 +9,27 @@
 	</head>
 	<body>
 		<main>
-      <h2>Connected User</h2>
-      <ul>
-        <li>Mobile Number: <%= user.number %></li>
-        <li>Language: <%= user.language %></li>
-        <li>Time Zone: <%= user.timezone %></li>
-        <li>PIN Number: <%= user.pin %></li>
-        <li>Manager's Branch ID: <%= user.branch %></li>
-        <li>Status: <%= user.status %></li>
-      </ul>
-      <h2>Bitcoin Wallet</h2>
-      <ul>
-        <li>Currency: <%= user.currency %></li>
-        <li>Balance: <%= user.wallet.BTC %> (<%= user.wallet.USD %>)</li>
-        <li>Address: <%= user.wallet.address %></li>
-      </ul>
-      <img src="<%= user.wallet.qr %>">
+      <a href="/">Home</a>
+      <section>
+        <h2>Connected User</h2>
+        <ul>
+          <li>Mobile Number: <%= user.number %></li>
+          <li>Language: <%= user.language %></li>
+          <li>Time Zone: <%= user.timezone %></li>
+          <li>PIN Number: <%= user.pin %></li>
+          <li>Manager's Branch ID: <%= user.branch %></li>
+          <li>Status: <%= user.status %></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Bitcoin Wallet</h2>
+        <ul>
+          <li>Currency: <%= user.currency %></li>
+          <li>Balance: <%= user.wallet.BTC %> (<%= user.wallet.USD %>)</li>
+          <li>Address: <%= user.wallet.address %></li>
+        </ul>
+        <img src="<%= user.wallet.qr %>">
+      </section>
 		</main>
 		<script>
 
