--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -7,6 +7,12 @@
       input, textarea {
         display:block;
       }
+      input[type="checkbox"] {
+        display:inline;
+      }
+      img {
+        height:100px;
+      }
 		</style>
 	</head>
 	<body>
@@ -99,7 +105,7 @@
               <li>Balance: <%= to.balance %></li>
             </ul>
           <% }) %>
-          <img src="<%= transaction.image %>" height="100">
+          <img src="<%= transaction.image %>">
         <% }) %>
       </section>
 		</main>
