--- a/views/recurrences.ejs
+++ b/views/recurrences.ejs
@@ -4,7 +4,7 @@
 		<title>Recurrences</title>
 		<meta charset="utf-8">
 		<style>
-      input, textarea {
+      select, input, textarea {
         display:block;
       }
       input[type="checkbox"] {
@@ -19,9 +19,21 @@
 	<body>
 		<main>
       <a href="/">Home</a>
+      <% if (query.image) { %>
+        <img src="<%= query.image %>">
+      <% } %>
       <section>
-        <h2>Post Transaction: <%= query.id %></h2>
+        <h2>Post via Transaction: <%= query.id %></h2>
         <form method="POST" action="/recurrences/transaction" enctype = "multipart/form-data">
+          <input type="hidden" name="id" value="<%= query.id %>">
+          <select name="cycle">
+            <option value="Daily">Daily</option>
+            <option value="Weekly">Weekly</option>
+            <option value="Monthly" selected>Monthly</option>
+            <option value="Yearly">Yearly</option>
+          </select>
+          <input type="date" name="date" placeholder="Start Date" value="<%= query.start ? (new Date(parseInt(query.start))).toISOString().substring(0, 10) : null %>">
+          <input type="time" name="time" placeholder="Start Time" value="<%= query.start ? (new Date(parseInt(query.start))).toISOString().substring(11, 16) : null %>">
           <select name="command">
             <option value="deposit">Deposit</option>
             <option value="withdraw">Withdraw</option>
@@ -36,22 +48,23 @@
           <input type="number" name="amount" placeholder="Amount">
 	        <textarea placeholder="Description" name="description"></textarea>
           <input type="file" name="media" size="1">
-          <% if (query.image) { %>
-            <img src="<%= query.image %>">
-            Remove: <input type="checkbox" name="remove">
-          <% } %>
 	        <input type="submit" value="Submit">
 	      </form>
       </section>
       <section>
-        <h2>Post Message: <%= query.id %></h2>
+        <h2>Post via Message: <%= query.id %></h2>
         <form method="POST" action="/recurrences/message" enctype = "multipart/form-data">
-	        <textarea placeholder="Transaction Message" name="message"></textarea>
+          <input type="hidden" name="id" value="<%= query.id %>">
+          <select name="cycle">
+            <option value="Daily">Daily</option>
+            <option value="Weekly">Weekly</option>
+            <option value="Monthly" selected>Monthly</option>
+            <option value="Yearly">Yearly</option>
+          </select>
+          <input type="date" name="date" placeholder="Start Date" value="<%= query.start ? (new Date(parseInt(query.start))).toISOString().substring(0, 10) : null %>">
+          <input type="time" name="time" placeholder="Start Time" value="<%= query.start ? (new Date(parseInt(query.start))).toISOString().substring(11, 16) : null %>">
+	        <textarea placeholder="Transaction Message" name="message"><%= query.command %></textarea>
           <input type="file" name="media" size="1">
-          <% if (query.image) { %>
-            <img src="<%= query.image %>">
-            Remove: <input type="checkbox" name="remove">
-          <% } %>
 	        <input type="submit" value="Submit">
 	      </form>
       </section>
@@ -61,8 +74,8 @@
           <ul>
             <li>ID: <%= recurrence.id %></li>
             <li><%= recurrence.cycle %> @ <%= recurrence.date %> <%= recurrence.time %> (<%= recurrence.timezone %>)</li>
-            <li>Command: <%= recurrence.command %></li>
-            <li><a href="/recurrences?id=<%= recurrence.id %>&cycle=<%= recurrence.cycle %>&date=<%= recurrence.date %>&time=<%= recurrence.time %>&command=<%= recurrence.command %>&image=<%= recurrence.image %>">Edit</a></li>
+            <li>Command: <%- recurrence.command %></li>
+            <li><a href="/recurrences?id=<%= recurrence.id %>&cycle=<%= recurrence.cycle %>&start=<%= recurrence.datetime %>&command=<%= recurrence.command %>&image=<%= recurrence.image %>">Edit</a></li>
             <li><a href="/recurrences/<%= recurrence.id %>">Delete</a></li>
           </ul>
           <img src="<%= recurrence.image %>">
