--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -42,8 +42,9 @@
         <h2>Post Message</h2>
         <form method="POST" action="/transactions/message" enctype="multipart/form-data">
 	        <textarea placeholder="Transaction Message" name="message"></textarea>
+					<input type="button" value="Check">
           <input type="file" name="media" size="1">
-	        <input type="submit" value="Submit">
+					<input type="submit" value="Submit">
 	      </form>
       </section>
       <section>
