--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -40,9 +40,10 @@
       </section>
       <section>
         <h2>Post Message</h2>
-        <form method="POST" action="/transactions/message" enctype="multipart/form-data">
+        <form id="message" method="POST" action="/transactions/message" enctype="multipart/form-data">
 	        <textarea placeholder="Transaction Message" name="message"></textarea>
-					<input type="button" value="Check">
+					<input type="button" value="Check" onclick="check()">
+					<span id="check"></span>
           <input type="file" name="media" size="1">
 					<input type="submit" value="Submit">
 	      </form>
@@ -113,7 +114,18 @@
       </section>
 		</main>
 		<script>
-
+			const check = () => {
+				fetch('/customers', {credentials:'same-origin', method:'post', body:new FormData(document.getElementById('message'))})
+				.then(response => {
+					return response.json();
+				})
+				.then(data => {
+					document.getElementById('check').innerHTML = data.kiitos;
+				})
+				.catch(error => {
+					console.error(error);
+				});
+			}
     </script>
 	</body>
 </html>
