Add kiitos page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
 			<section>
 				<h2>API Endpoints</h2>
 				<ol>
+					<li><a href="/kiitos">Kiitos</a></li>
 					<li><a href="/users">Users</a></li>
       		<li><a href="/clients">Clients</a></li>
 					<li><a href="/branches">Branches</a></li>
